🐛 fix: attempt to fix the overflow problem
this may or may not fix it (it looks algud on my screen with responsive tool on)

--- a/frontend/src/components/CreateLessonModal/CreateLessonModal.module.css
+++ b/frontend/src/components/CreateLessonModal/CreateLessonModal.module.css
@@ -59,6 +59,7 @@
 
 .contentContainer {
   overflow: auto;
+  overflow-y: hidden;
   display: flex;
   flex-direction: column;
 }
